<package>
	<description>
		ROS Driver for the Cyber Glove.
	</description>

	<name>cyberglove</name>

	<author email="ugo@shadowrobot.com">Ugo Cupcic</author>
	<maintainer email="chitt@live.in">Chittaranjan Srinivas Swaminathan</maintainer>

	<version>0.0.2</version>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>cmake_modules</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>roslib</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>diagnostic_msgs</build_depend>

	<run_depend>rospy</run_depend>
	<run_depend>roslib</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>diagnostic_msgs</run_depend>


</package>
	
	
